# agentic-apihashing-resolver

./: .dockerignore  .gitignore  AGENT.md  Dockerfile.backend  README.md  SKILL.md  docker-compose.yml  pyproject.toml
apihashing/: __init__.py  __main__.py  app.py  cli.py  mcp_server.py  plugin_api.py
apihashing-contributor-skill/: SKILL.md
apihashing-workspace/packs/localstash/: README.md
apihashing/core/: algorithms.py  analyzer.py  authoring.py  models.py  pack_loader.py  renderers.py  service.py  workspace.py
docs/: api.md  mcp-examples.md
packs/: README.md
packs/oalabs-hashdb/algorithms/: add_rol5_hash_again.py  add_ror13.py  add_ror4.py  babbleloader.py  babbleloader_0125.py  blister2.py  brc4_joaat.py  ch_add_rol8.py  chrysalis_hybrid_murmur.py  conti.py  conti_b801fcda.py  conti_e9ff0077.py  conti_mm3.py  djb2_lowercase.py  djb2_nokoyawa.py  dualacc_modfff1.py  emotet.py  fnv1.py  fnv1_64.py  mul_1459.py  mult21_add.py  murmur2_lummas_v3.py  murmur3_93FB64.py  or23_xor_rol17.py  rol8_xor_b0d4d06.py  rol9_xor.py  ror13_add.py  ror13_add_negative_seed.py  ror13_add_sub20.py  ror8_add_xor_ab832e83.py  shl7_shr19_xor.py  shl7_sub.py  shr1_shl7_2326.py  shr2_shl5_xor.py  single_camper_hash.py  smokeloader_rol8_xor.py  tonepipeshell.py  (+1 more)
tests/: test_api.py  test_authoring.py  test_byteops_examples.py  test_cli.py  test_core_resolution.py  test_mcp_server.py  test_native_plugin.py  test_packaging_metadata.py  test_workspace.py
ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  main.js
ui/tests/: app.test.js
(+81 files in other folders)
