[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apihashing"
version = "0.1.0"
description = "API hashing platform for malware analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.0",
  "httpx>=0.28.1",
  "uvicorn>=0.44.0",
  "pydantic>=2.13.3",
  "lief>=0.17.6",
  "PyYAML>=6.0.3",
  "python-multipart>=0.0.26",
  "byteops>=0.1.0",
  "watchfiles>=1.1.1",
]

[project.scripts]
apihashing = "apihashing.cli:main"
apihashing-mcp = "apihashing.mcp_server:main"

[tool.setuptools.packages.find]
include = ["apihashing*"]

[tool.setuptools.package-data]
apihashing = ["templates/**/*.tmpl", "bundled_packs/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
